--- a/listing5/listing5.8/list5.8.html
+++ b/listing5/listing5.8/list5.8.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>listing 5.8</title>
 </head>
+
 <body>
-$END$
+
+<h3>listing 5.8</h3>
+<br>
+<hr>
+<script src="list0508.js"></script>
+
 </body>
+
 </html>
