--- a/listing7/listing7.3/list7.3.html
+++ b/listing7/listing7.3/list7.3.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>listing 7.1</title>
+    <title>listing 7.3</title>
+    <script>
+        function show() {
+            alert("Веб документ загружен!")
+        }
+    </script>
+
 </head>
 
-<body>
+<body onload="show()">
 
-<h3>listing 7.1</h3>
+<h3>listing 7.3</h3>
 <br>
 <hr>
-<a href="javascript: var s=0; for(var k=1; k<=10;k++){s+=k} alert('1+2+…+10='+s)">
-    Вычислить сумму от 1 до 10
-</a>
-
 </body>
 
 </html>
