--- a/listing8/listing8.1/list8.1.html
+++ b/listing8/listing8.1/list8.1.html
@@ -7,121 +7,80 @@
           content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <title>listing 8.1</title>
+    <title>listing 8.2</title>
     <script>
-        let msgA = 
-            "В поле вводится текст. Кнопка <b>Применить</b> позволяет вствить текст в документ . Кнопка <b>Розблокировать</b> делает доступніми поле ввода и кнопку  <b> Применить </b>"
-        let msgB = "Ввидите текст в поле ввода и щелкните кнопку<b>Применить</b>"
-        let msgC = "Для  отмены блокировки поле и кнопки <b>Применить</b> щелкните кнопку <b>Разблокировать</b>."
-
-        let tf, ab, ub, mt, mp
-
         window.onload = function () {
-            tf = document.getElementById("textField")
-            ab = document.getElementById("applyButton")
-            ub = document.getElementById("unlockButton")
-            mt = document.getElementById("mytext")
-            mp = document.getElementById("myprompt")
-            setColor(false)
-            tf.value = ""
-            tf.disabled = false
-            ab.disabled = false
-            ub.disabled = true
-            mp.innerHTML = msgA
+            let inFld, outFld, inStl, outStl
 
-            tf.onmouseover = function () {
-                if (!this.disabled) {
-                    setColor(true)
-                }
-            }
+            outFld = document.getElementById("outField")
+            outStl = outFld.style
+            outStl.height = "50px"
+            outStl.width = "400px"
+            outStl.backgroundColor = "white"
+            outStl.borderColor = "magenta"
+            outStl.borderBottomRightRadius = "30px"
 
-            tf.onmouseout = function () {
-                if (!this.disabled) {
-                    setColor(false)
-                }
-            }
+            outStl.borderTopLeftRadius = "30px"
+            outStl.borderWidth = "5px"
 
-            ab.onclick = function () {
-                mt.innerHTML = tf.value
-                tf.disabled = true
-                ub.disabled = false
-                ab.disabled = true
-            }
+            outStl.margin = " 5px"
+            outStl.padding = "2px 10px 2px 10px"
 
-            ab.onmouseover = function () {
-                if (!this.disabled) {
-                    applyPrompt(msgB)
-                }
-            }
-            ab.onmouseout = function () {
-                if (!this.disabled) {
-                    applyPrompt(msgA)
-                }
-            }
+            outStl.letterSpacing = "7px"
 
-            ub.click = function () {
-                tf.value = ""
-                mt.innerHTML = ""
-                tf.disabled = false
-                ab.disabled = false
-                ub.disabled = true
-            }
+            outStl.fontFamily = "Times New Roman"
 
-            ub.onmouseover = function () {
-                if (!this.disabled) {
-                    applyPrompt(msgC)
-                }
-            }
+            outStl.fontStyle = "italic"
 
-            ub.onmouseout = function () {
-                if (!this.disabled) {
-                    applyPrompt(msgA)
-                }
-            }
-        }
+            outStl.fontWeight = "900"
 
-        function setColor(arg) {
-            if (arg) {
-                tf.style.backgroundColor = "yellow"
-                tf.style.borderColor = "red"
-            } else {
-                tf.style.backgroundColor = "white"
-                tf.style.borderColor = "gray"
-            }
-        }
+            outStl.color = "red"
 
-        function applyPrompt(msg) {
-            mp.innerHTML = msg
+            outStl.fontSize = "18pt"
+
+            outFld.readOnly = true
+
+            outFld.value = ""
+            inFld = document.getElementById("inField")
+
+            inStl = inFld.style
+            inStl.height = "30px"
+
+            inStl.width = "400px"
+
+            inStl.borderWidth = "5px"
+
+            inStl.borderStyle = "dotted"
+
+            inStl.borderLeftColor = "#00ff00"
+
+            inStl.borderRightColor = "#0000ff"
+
+            inStl.borderBottomColor = "#000000"
+
+            inStl.padding = "2px 10px 2px 10px"
+
+            inStl.margin = "5px"
+            inStl.color = "blue"
+            inFld.valueOf = ""
+            inFld.focus()
+
+            inFld.onkeyup = function () {
+                outFld.value = this.value
+            }
         }
     </script>
 </head>
 <body>
 
 
-<h3>listing 8.1</h3>
-<br>
+<h3>listing 8.2</h3><br>
 <hr>
 
-<b>Поле ввода содержит такой текст:</b><br>
+<p>Ввeднный в нижнее поле текст дублируется в верхнем поле.</p>
 
-<i id="mytext"
-   style="font-size:25pt;color: red;"></i><br>
-
-<input type="text"
-       id="textField"
-       size="62"><br>
-
-<input type="button"
-       id="applyButton"
-       value="Применить"
-       style="width: 200px;height: 30px;">
-
-
-<button id="unlockButton"
-        style="width: 200px; height: 30px;"> Разблокировать
-</button>
-
-<p id="myprompt"></p>
+<input type="text" id="outField"><br>
+<input type="text" id="inField">
 
 </body>
 
